--- a/MAuthen.Client/ClientApp/src/app/components/card/card.component.html
+++ b/MAuthen.Client/ClientApp/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="min-width: 18rem; max-width: 28rem;">
+<div class="card" style="min-width: 18rem;">
     <div class="p-2" style="text-align: center">
         <img src="assets/img/cyber_security-512.png" style="height: 4rem; width: 4rem;"
             class="card-img-top rounded-circle img-thumbnail">
