--- a/MAuthen.Client/ClientApp/src/app/components/card/card.component.html
+++ b/MAuthen.Client/ClientApp/src/app/components/card/card.component.html
@@ -3,28 +3,38 @@
         <img src="assets/img/cyber_security-512.png" style="height: 4rem; width: 4rem;"
             class="card-img-top rounded-circle img-thumbnail">
     </div>
-    <div class="card-body">
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="username"><i class="fas fa-user-tie"></i></span>
+    <form class="mb-3" [formGroup]="loginForm">
+        <div class="card-body">
+            <div class="row" class="text-danger p-2" *ngIf="error" ><i class="fas fa-exclamation-circle pr-1 text-danger"></i> {{error}}</div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">@</span>
+                </div>
+                <input formControlName="email" type="text" class="form-control" placeholder="Email"
+                    [ngClass]="{ 'is-invalid': f.email.errors && (loginForm.controls['email'].touched || submitted)}">
+                <div *ngIf="f.email.errors" class="invalid-feedback ml-3">
+                    <div *ngIf="f.email.errors.required">Email is required</div>
+                    <div *ngIf="f.email.errors.email">Email is not valid</div>
+                </div>
             </div>
-            <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-                aria-describedby="username">
-        </div>
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="username"><i class="fas fa-key"></i></span>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-key"></i></span>
+                </div>
+                <input formControlName="password" type="password" autocomplete="password" class="form-control" placeholder="Pasadd onlyusword"
+                    [ngClass]="{ 'is-invalid': f.password.errors && (loginForm.controls['password'].touched || submitted)}">
+                <div *ngIf="f.password.errors" class="invalid-feedback ml-3">
+                    <div *ngIf="f.password.errors.required">Password is required</div>
+                </div>
             </div>
-            <input type="password" class="form-control" placeholder="Username" aria-label="Username"
-                aria-describedby="username">
         </div>
-    </div>
-    <div class="card-body">
-        <div class="row justify-content-center">
-            <button class="btn gradient">Submit form</button>
+        <div class="card-body p-0">
+            <div class="row justify-content-center">
+                <button type="button" class="btn gradient text-light" (click)="onSubmit()">Log In</button>
+            </div>
+            <div class="row justify-content-center">
+                <button class="btn btn-link" type="button" (click)="swichToTegistration()">Create Account</button>
+            </div>
         </div>
-        <div class="row justify-content-center">
-            <button class="btn btn-link" (click)="swichToTegistration()">Create Account</button>
-        </div>
-    </div>
+    </form>
 </div>
