--- a/MAuthen.Client/ClientApp/src/app/pages/public/home/home.component.html
+++ b/MAuthen.Client/ClientApp/src/app/pages/public/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="row h-100" aria-live="polite" aria-atomic="true">
         
-    <div class="d-flex align-items-center w-100">
+    <!-- <div class="d-flex align-items-center w-100">
       <div class="mx-auto">
         <div class="p-2">
           <card (switch)="changeToRedgistration($event)" *ngIf="!showRegistration"></card>
@@ -11,15 +11,15 @@
         </div>
         
       </div>
-    </div>
+    </div> -->
     
-    <!-- <div class="col-12  align-self-center mx-auto">
+    <div class="col-12  align-self-center mx-auto">
       <div class="d-flex justify-content-center">
         <card (switch)="changeToRedgistration($event)" *ngIf="!showRegistration"
           class="col col-sm-6 col-md-4 col-lg-3 col-xl-3 p-1"></card>
         <registration-card (switch)="changeToRedgistration($event)" (registrationError)="registrationError($event)"
           class="col col-sm-6 col-md-7 col-lg-7 col-xl-5 p-0" *ngIf="showRegistration"></registration-card>
       </div>
-    </div> -->
+    </div>
   </div>
 </div>
