--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/app.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/app.component.html
@@ -1,4 +1,4 @@
 <navbar></navbar>
-<div class="h-100 w-100">
+<div class="flex-shrink-0 flex-grow-1 gradient">
     <router-outlet></router-outlet>
 </div>
