--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/card/card.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/card/card.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="card-body p-0">
             <div class="row justify-content-center">
-                <button type="button" class="btn gradient text-light" (click)="onSubmit()">Log In</button>
+                <button type="button" [disabled]="loading" class="btn gradient text-light" (click)="onSubmit()">Log In</button>
             </div>
             <div class="row justify-content-center">
                 <button class="btn btn-link" type="button" (click)="swichToTegistration()">Create Account</button>
