--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
@@ -35,7 +35,7 @@
                     <strong>Birthday</strong>
                 </div>
                 <div class="col-sm-3">
-                    {{birthDay |  date:'mediumDate'}}
+                    {{ birthday |  date:'mediumDate'}}
                 </div>
             </div>
         </div>
