--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
@@ -2,7 +2,7 @@
     <div class="row ml-4 pt-4 mt-3">
         <h2>Profile</h2>
     </div>
-    <div class="container bg-light">
+    <div class="container bg-light pb-3">
         <hr class="m-0">
         <div *ngIf="user">
             <div class="row ml-4 pt-4">
@@ -49,94 +49,5 @@
             </div>
             <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
         </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
-        <div class="row ml-4 pt-4 pb-3 mb-3">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
-            </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
-        </div>
     </div>
+</div>
