--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-light">
+<div class="container bg-light" *ngIf="user">
     <div class="row ml-4 pt-4 mt-3">
         <h2>Profile</h2>
     </div>
@@ -39,15 +39,44 @@
                 </div>
             </div>
         </div>
-        <div class="row ml-4 pt-4 mt-3">
-            <h2>Contact</h2>
-        </div>
-        <hr class="m-0">
-        <div class="row ml-4 pt-4">
-            <div class="col-sm-4" style="border-style: solid;border-color: red;">
-                <strong>Name</strong>
+        <div *ngIf="user.contacts">
+            <div class="row ml-4 pt-4 mt-3">
+                <h2>Contacts</h2>
             </div>
-            <div class="col-sm-3" style="border-style: solid;border-color: blue;"></div>
+            <hr class="m-0">
+            <div class="row ml-4 pt-4">
+                <div class="col-sm-6">
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <strong>Email addresses</strong>
+                            <button class="btn btn-linck">
+                                <span style="color: Dodgerblue;">
+                                    <i class="fas fa-plus-circle fa-lg"></i>
+                                </span>
+                            </button>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center"
+                        *ngFor="let contact of contacts">
+                           {{contact.email}}
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-6">
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <strong>Phone numbers</strong>
+                            <button class="btn btn-linck">
+                                <span style="color: Dodgerblue;">
+                                    <i class="fas fa-plus-circle fa-lg"></i>
+                                </span>
+                            </button>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let contact of contacts">
+                            {{contact.phone}}
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
