Add contact modal

--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/card/card.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/card/card.component.html
@@ -35,7 +35,7 @@
         </div>
         <div class="card-body p-0">
             <div class="row justify-content-center">
-                <button type="button" [disabled]="loading" class="btn gradient text-light" (click)="onSubmit()">Log
+                <button type="button" [disabled]="loading" class="btn btn-primary" (click)="onSubmit()">Log
                     In</button>
             </div>
             <div class="row justify-content-center">
