FIx contact modal

--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
@@ -49,7 +49,7 @@
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             <strong>Email addresses</strong>
-                            <button class="btn btn-linck">
+                            <button class="btn btn-linck" (click)="addEmail()">
                                 <span style="color: Dodgerblue;">
                                     <i class="fas fa-plus-circle fa-lg"></i>
                                 </span>
