--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/contact-edit-modal/contact-edit-modal.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/contact-edit-modal/contact-edit-modal.component.html
@@ -1,21 +1,33 @@
 <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">{{title}}</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-    <form>
+    <form [formGroup]="contactForm">
         <div class="form-group">
             <label for="name">{{label}}</label>
-            <div class="input-group">
-                <input #input name="name" class="form-control" value="{{name}}" (keyup.enter)="modal.close(input.value)"
-                    ngbAutofocus>
+            <div class="input-group" *ngIf="isEmail">
+                <input formControlName="name" class="form-control" (keyup.enter)="modal.close(input.value)"
+                    ngbAutofocus
+                    [ngClass]="{ 'is-invalid': f.name.errors && (contactForm.controls['name'].touched || submitted)}">
+                <div *ngIf="f.name.errors" class="invalid-feedback ml-3">
+                    <div *ngIf="f.name.errors.email">Email is not valid</div>
+                </div>
+            </div>
+            <div class="input-group" *ngIf="!isEmail">
+                <input formControlName="name" class="form-control" (keyup.enter)="modal.close(input.value)"
+                    ngbAutofocus
+                    [ngClass]="{ 'is-invalid': f.name.errors && (contactForm.controls['name'].touched || submitted)}">
+                <div *ngIf="f.name.errors" class="invalid-feedback ml-3">
+                    <div *ngIf="f.name.errors.invalidNumber">Phone number is not valid</div>
+                </div>
             </div>
         </div>
     </form>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss()">Cancel</button>
-    <button type="button" class="btn btn-primary" (click)="modal.close(input.value)">Save</button>
+    <button type="button" class="btn btn-primary" (click)="save()">Save</button>
 </div>
