--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/navbar/navbar.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <header class="fixedComponent">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark shadow">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#" style="height: 40px; width: 50px;">
+            <img class="align-self-start " src="../../../assets/img/logo.png" style="height: 100%; width: 100%;">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav" *ngIf="user">
                 <li *ngFor="let item of menuItems" class="nav-item">
-                    <a class="nav-link"  [routerLink]='[item.link]'>{{ item.name }}</a>
+                    <a class="nav-link"  [routerLink]="[item.link]">{{ item.name }}</a>
                 </li>
 
             </ul>
