--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/account/account.component.html
@@ -34,7 +34,7 @@
                 <strong>Birthday</strong>
             </div>
             <div class="col-sm-3">
-                {{ birthday |  date:'mediumDate'}}
+                {{ user.birthday |  date:'mediumDate'}}
             </div>
         </div>
     </div>
