--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/service/service.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/service/service.component.html
@@ -11,21 +11,57 @@
             </div>
         </div>
     </div>
-    <hr class="m-0">
+    <hr class="m-0 ">
+
     <div class="row p-3" *ngIf="!services">
-        <div class="col-12 alert alert-info" role="alert">
+        <div class="col-12 text-center" *ngIf="loading">
+            <div class="spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+        <div class="col-12 alert alert-info" *ngIf="!loading" role="alert">
             You d'ont hawe any service.
         </div>
     </div>
-    <div class="row mt-3">
-        <div class="col-12 col-sm-12">
-            <ul class="list-group">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Morbi leo risus</li>
-                <li class="list-group-item">Porta ac consectetur ac</li>
-                <li class="list-group-item">Vestibulum at eros</li>
-            </ul>
+    <div class="row pl-3 pt-3 pr-3 pb-0" *ngIf="services">
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">Name</th>
+                        <th scope="col">Domain</th>
+                        <th scope="col">Modified</th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let service of servicesTable">
+                        <td>
+                            {{ service.name }}
+                        </td>
+                        <td>{{ service.domain}}</td>
+                        <td>{{ service.createdOn |  date:'mediumDate' }}</td>
+                        <td class="text-center">
+                            <button class="btn btn-linck" (click)="updateService(service)">
+                                <span style="color: Dodgerblue;">
+                                    <i class="fas fa-pencil-alt"></i>
+                                </span>
+                            </button>
+                            <button class="btn btn-linck" (click)="deleteService(service.id)">
+                                <span class="text-danger">
+                                    <i class="fas fa-trash-alt"></i>
+                                </span>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="row pr-5 justify-content-end" *ngIf="collectionSize>pageSize">
+        <div class="d-flex justify-content-between pr-3">
+            <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
+            </ngb-pagination>
         </div>
     </div>
 </div>
