--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/service-users/service-users.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/service-users/service-users.component.html
@@ -5,11 +5,13 @@
         </div>
     </div>
     <div class="col-12 text-center" *ngIf="!users && loading">
-            <div class="spinner-border" role="status">
-                <span class="sr-only">Loading...</span>
-            </div>
+        <div class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
         </div>
+    </div>
     <div class="row pl-3 pt-0 pr-3 pb-0" *ngIf="users">
+            <div class="row" @fadeAnimation class="text-danger p-2" *ngIf="error"><i
+                class="fas fa-exclamation-circle pr-1 text-danger"></i> {{error}}</div>
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
@@ -26,14 +28,14 @@
                         </td>
                         <td>{{user.role}}</td>
                         <td class="text-right">
-                            <button class="btn btn-linck" (click)="blockUser(user.id)">
+                            <button class="btn btn-linck" (click)="unBlockUser(user)" *ngIf="user.isBlocked !!">
                                 <span class="text-danger">
                                     <i class="fas fa-ban"></i>
                                 </span>
                             </button>
-                            <button class="btn btn-linck" (click)="deleteService(service.id)">
-                                <span class="text-danger">
-                                    <i class="fas fa-trash-alt"></i>
+                            <button class="btn btn-linck" (click)="blockUser(user)" *ngIf="!user.isBlocked">
+                                <span class="text-info">
+                                    <i class="fas fa-user-slash"></i>
                                 </span>
                             </button>
                         </td>
