--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/service-users/service-users.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/service-users/service-users.component.html
@@ -3,6 +3,13 @@
         <div class="col-6 col-sm-6 pl-0 pt-1">
             <h2>Services Users</h2>
         </div>
+        <div class="col-6 col-sm-6">
+            <div class="float-right pr-3">
+                <button class="btn btn-link mt-2" (click)="addService()">
+                    <h5><i class="fas fa-plus"></i> Add Service</h5>
+                </button>
+            </div>
+        </div>
     </div>
     <div class="col-12 text-center" *ngIf="!users && loading">
         <div class="spinner-border" role="status">
@@ -10,7 +17,7 @@
         </div>
     </div>
     <div class="row pl-3 pt-0 pr-3 pb-0" *ngIf="users">
-            <div class="row" @fadeAnimation class="text-danger p-2" *ngIf="error"><i
+        <div class="row" @fadeAnimation class="text-danger p-2" *ngIf="error"><i
                 class="fas fa-exclamation-circle pr-1 text-danger"></i> {{error}}</div>
         <div class="table-responsive">
             <table class="table table-hover">
