--- a/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/service-users/service-users.component.html
+++ b/MAuthen.Data/MAuthen.Api/ClientApp/src/app/pages/private/service-users/service-users.component.html
@@ -5,8 +5,8 @@
         </div>
         <div class="col-6 col-sm-6">
             <div class="float-right pr-3">
-                <button class="btn btn-link mt-2" (click)="addService()">
-                    <h5><i class="fas fa-plus"></i> Add Service</h5>
+                <button class="btn btn-link mt-2" (click)="addRole()">
+                    <h5><i class="fas fa-plus"></i> Add Role</h5>
                 </button>
             </div>
         </div>
@@ -30,10 +30,10 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let user of userTable">
-                        <td class="clickable">
+                        <td >
                             {{user.firstName}} {{user.lastName}}
                         </td>
-                        <td>{{user.role}}</td>
+                        <td  (click)="changeRole(user.id)" class="clickable text-primary">{{user.role}}</td>
                         <td class="text-right">
                             <button class="btn btn-linck" (click)="unBlockUser(user)" *ngIf="user.isBlocked !!">
                                 <span class="text-danger">
